fixed css bug on mobile

--- a/styles/IndexPage.module.css
+++ b/styles/IndexPage.module.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: 100%;
+  min-width: 100%;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
